--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   </head>
   <body>
 
-  <figure>
-  <img width="1038" alt="screenshot" src="https://github.com/ehamiter/bookerics-landing-page/assets/634230/d17f360d-3f34-4344-82a0-fd4744c77282">
-    <figcaption>bookmarks, but for Erics</figcaption>
-  </figure>
+  <p style="text-align: center">
+    <figure>
+    <img width="1038" alt="screenshot" src="https://github.com/ehamiter/bookerics-landing-page/assets/634230/d17f360d-3f34-4344-82a0-fd4744c77282">
+      <figcaption>bookmarks, but for Erics</figcaption>
+    </figure>
+  </p>
 
   </body>
 </html>
