--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html>
   <head>
     <title>bookerics</title>
+    <style>
+      img {
+      display: block;
+      margin: 0 auto;
+    }
+    </style>
   </head>
   <body>
 
-  <p style="text-align: center">
-    <figure>
+  <figure>
     <img width="1038" alt="screenshot" src="https://github.com/ehamiter/bookerics-landing-page/assets/634230/d17f360d-3f34-4344-82a0-fd4744c77282">
-      <figcaption>bookmarks, but for Erics</figcaption>
-    </figure>
-  </p>
+    <figcaption>bookmarks, but for Erics</figcaption>
+  </figure>
 
   </body>
 </html>
