--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>bookerics</title>
     <style>
-      img {
+      figure {
       display: block;
       margin: 0 auto;
     }
