--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>bookerics</title>
     <style>
-      figure {
+      img {
         display: block;
         margin: 0 auto;
       }
+      figcaption { text-align: center; }
     </style>
   </head>
   <body>
