--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
         display: block;
         margin: 0 auto;
       }
-      figcaption { text-align: center; }
+      figcaption { 
+        text-align: center;
+        font-body: 'Helvetica', sans-serif;
+        font-style: italic;
+      }
     </style>
   </head>
   <body>
