--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
       figcaption { 
         text-align: center;
-        font-body: 'Helvetica', sans-serif;
+        font-family: 'Helvetica', sans-serif;
       }
     </style>
   </head>
