--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>bookerics</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bookerics Landing Page</title>
     <style>
-      img {
-        display: block;
-        margin: 0 auto;
-      }
-      figcaption { 
-        text-align: center;
-        font-family: 'Helvetica', sans-serif;
-      }
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+        }
+        figure {
+            text-align: center;
+            margin: 0;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+        figcaption {
+            margin-top: 10px;
+            font-size: 1.2em;
+            color: #333;
+        }
     </style>
-  </head>
-  <body>
-
-  <figure>
-    <img width="1038" alt="screenshot" src="https://github.com/ehamiter/bookerics-landing-page/assets/634230/d17f360d-3f34-4344-82a0-fd4744c77282">
-    <figcaption>bookmarks, but for Erics</figcaption>
-  </figure>
-
-  </body>
+</head>
+<body>
+    <figure>
+        <img width="1038" alt="screenshot" src="https://github.com/ehamiter/bookerics-landing-page/assets/634230/d17f360d-3f34-4344-82a0-fd4744c77282">
+        <figcaption>bookmarks, but for Erics</figcaption>
+    </figure>
+</body>
 </html>
