--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookerics Landing Page</title>
+    <title>bookerics</title>
     <style>
         body {
             display: flex;
@@ -31,7 +31,7 @@
 </head>
 <body>
     <figure>
-        <img width="1038" alt="screenshot" src="https://github.com/ehamiter/bookerics-landing-page/assets/634230/d17f360d-3f34-4344-82a0-fd4744c77282">
+        <img width="1038" alt="screenshot of bookerics" src="https://github.com/ehamiter/bookerics-landing-page/assets/634230/d17f360d-3f34-4344-82a0-fd4744c77282">
         <figcaption>bookmarks, but for Erics</figcaption>
     </figure>
 </body>
