--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         figure {
             text-align: center;
             margin: 0;
+            padding-bottom: 2rem;
         }
         img {
             max-width: 100%;
