--- a/index.html
+++ b/index.html
@@ -10,21 +10,18 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            margin: 0;
+            margin: auto;
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
         }
         figure {
             text-align: center;
-            margin: 0;
-            padding-bottom: 2rem;
         }
         img {
             max-width: 100%;
             height: auto;
         }
         figcaption {
-            margin-top: 10px;
             font-size: 1.2em;
             color: #333;
         }
