--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <figure>
-        <img width="1038" alt="screenshot of bookerics" src="https://github.com/ehamiter/bookerics-landing-page/assets/634230/d17f360d-3f34-4344-82a0-fd4744c77282">
+        <img width="2144" alt="screenshot of bookerics" src="https://raw.githubusercontent.com/ehamiter/bookerics-landing-page/main/screenshot.webp">
         <figcaption>bookmarks, but for Erics</figcaption>
     </figure>
 </body>
