--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 </head>
 <body>
     <figure>
-        <img width="980" alt="screenshot of bookerics" src="https://raw.githubusercontent.com/ehamiter/bookerics-landing-page/main/screenshot.webp">
-        <figcaption>bookmarks, but for Erics</figcaption>
+        <a href="/feeds/rss.xml">
+            <img width="980" alt="screenshot of bookerics" src="https://raw.githubusercontent.com/ehamiter/bookerics-landing-page/main/screenshot.webp">
+        </a>
+            <figcaption>bookmarks, but for Erics</figcaption>
     </figure>
 </body>
 </html>
