--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </head>
 <body>
     <figure>
-        <a href="/feeds/rss.xml">
-            <img width="980" alt="screenshot of bookerics" src="https://raw.githubusercontent.com/ehamiter/bookerics-landing-page/main/screenshot.webp">
+        <a href="https://bookerics.s3.amazonaws.com/feeds/rss.xml">
+            <img width="980" alt="screenshot of bookerics" src="screenshot.webp">
         </a>
             <figcaption>bookmarks, but for Erics</figcaption>
     </figure>
